GH-119 Implement Report user
